testsuite/poke.pkl/sl-diag-4.pk
/* { dg-do compile } */

var a = 20 <<. [1,2,3]; /* { dg-error "expected an integer" } */
